Closed Bug 1813132 Opened 1 year ago Closed 1 year ago

Early Hints: Link Images don't connect back to the early hint preloader

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: manuel, Assigned: manuel)

References

(Depends on 1 open bug, Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file, 1 obsolete file)

Sometimes the preload doesn't connect back. And displaying the image is delayed until the preload channel is cancelled with parent-connect-timeout. It looks like this: https://share.firefox.dev/4062ct3

I'm mostly concerned about why this is an intermittent failure./What makes this intermittent.

It looks like the preload loads the image from the image cache in these cases.

I have to verify that the same bug doesn't exist for the other assets.

I have a patch that fixes this by not using the image cache on early hint preloaded requests, but I'm not sure whether that is the correct approach.

The bug only happens when the server response includes a Cache-Control: no-store on the image reply.

Comment on attachment 9316777 [details]
Bug 1813132 - Test that Early Hint preload always connects back with hinted resources and doesn't make unexpected network requests r=#necko

Revision D169322 was moved to bug 1815884. Setting attachment 9316777 [details] to obsolete.

Attachment #9316777 - Attachment is obsolete: true
Pushed by mbucher@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/076aa4c5e6f6
Fix Early Hints image Link preloads not connecting back to preloader in parent process r=emilio,necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: