Bug 1813132 - Fix Early Hints image Link preloads not connecting back to preloader in parent process r=emilio,necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D168131