netwerk/test/browser/browser_103_assets.js
@@ -12,7 +12,8 @@ const { request_count_checking } = ChromeUtils.import(
 // - asset is the asset type, see early_hint_asset_html.sjs for possible values
 //   for the asset type fetch see test_hint_fetch due to timing issues
 // - hinted: when true, the server reponds with "103 Early Hints"-header
-async function test_hint_asset(testName, asset, hinted) {
+// - reload: when true, the browser reloads the page after first load completed
+async function test_hint_asset(testName, asset, hinted, reload) {
   // reset the count
   let headers = new Headers();
   headers.append("X-Early-Hint-Count-Start", "");
@@ -31,17 +32,25 @@ async function test_hint_asset(testName, asset, hinted) {
       url: requestUrl,
       waitForLoad: true,
     },
-    async function() {}
+    async function() {
+      if (reload) {
+        await BrowserTestUtils.reloadTab(gBrowser.selectedTab);
+      }
+    }
   );
 
   let gotRequestCount = await fetch(
     "http://example.com/browser/netwerk/test/browser/early_hint_pixel_count.sjs"
   ).then(response => response.json());
 
+  let numRequests = reload ? 2 : 1;
+
   await request_count_checking(
     `${testName} (${asset})`,
     gotRequestCount,
-    hinted ? { hinted: 1, normal: 0 } : { hinted: 0, normal: 1 }
+    hinted
+      ? { hinted: numRequests, normal: 0 }
+      : { hinted: 0, normal: numRequests }
   );
 }
 
@@ -49,18 +58,21 @@ async function test_hint_asset(testName, asset, hinted) {
 add_task(async function test_103_asset_image() {
   await test_hint_asset("test_103_asset_normal", "image", false);
   await test_hint_asset("test_103_asset_hinted", "image", true);
+  await test_hint_asset("test_103_asset_hinted", "image", true, true);
 });
 
 // preload css
 add_task(async function test_103_asset_style() {
   await test_hint_asset("test_103_asset_normal", "style", false);
   await test_hint_asset("test_103_asset_hinted", "style", true);
+  await test_hint_asset("test_103_asset_hinted", "style", true, true);
 });
 
 // preload javascript
 add_task(async function test_103_asset_javascript() {
   await test_hint_asset("test_103_asset_normal", "script", false);
   await test_hint_asset("test_103_asset_hinted", "script", true);
+  await test_hint_asset("test_103_asset_hinted", "script", true, true);
 });
 
 // preload javascript module
@@ -75,6 +87,7 @@ add_task(async function test_103_asset_module() {
 add_task(async function test_103_asset_font() {
   await test_hint_asset("test_103_asset_normal", "font", false);
   await test_hint_asset("test_103_asset_hinted", "font", true);
+  await test_hint_asset("test_103_asset_hinted", "font", true, true);
 });
 
 // - testName is just there to be printed during Asserts when failing
